--- a/assets/styles.scss
+++ b/assets/styles.scss
@@ -1,1 +1,2 @@
-@import "~bulmaswatch/superhero/bulmaswatch";
+@import "bulmaswatch/superhero/bulmaswatch";
+@import "highlight.js/scss/github.scss";
