--- a/styles/global.css
+++ b/styles/global.css
@@ -1,3 +1,6 @@
+@tailwind base;
+@tailwind components;
+
 html,
 body {
   padding: 0;
@@ -13,7 +16,7 @@ body {
 }
 
 a {
-  color: #0070f3;
+  @apply text-blue-600;
   text-decoration: none;
 }
 
@@ -26,8 +29,4 @@ img {
   display: block;
 }
 
-@tailwind base;
-
-@tailwind components;
-
-@tailwind utilites;
+@tailwind utilities;
